--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 jdbc.driver=com.mysql.cj.jdbc.Driver
 jdbc.url=jdbc:mysql://localhost:3306/mytest?useTimezone=true&serverTimezone=UTC
-jdbc.user=root
-jdbc.password=220984piv
+jdbc.user=
+jdbc.password=
 
 
